# ROMprg

./: .gitignore  .gitmodules  README.md
fw/romprg-firmware/: romprg-firmware.ino
fw/romprg-fw/: .gitignore  platformio.ini
fw/romprg-fw/src/: am29f040.cpp  am29f040.hpp  data_buffer.cpp  data_buffer.hpp  flash.cpp  flash.hpp  main.cpp
fw/romprg-fw/src/flash/: am29f040.cpp  am29f040.hpp  at24c02.cpp  at24c02.hpp  megadrive.cpp  megadrive.hpp
hw/: 27c.bak  27c.lib  romprg-cache.lib  romprg.bak  romprg.pro  romprg.sch
hw/lib/romprg.pretty/: Arduino_Mega2560_Shield_no_border.kicad_mod  Arduino_Mega2560_Shield_no_icsp.kicad_mod
hw/romprg_megadrive_cart/: fp-lib-table  romprg_megadrive_cart-cache.lib  romprg_megadrive_cart.bak  romprg_megadrive_cart.kicad_pcb  romprg_megadrive_cart.kicad_pcb-bak  romprg_megadrive_cart.net  romprg_megadrive_cart.rules  romprg_megadrive_cart.sch  sym-lib-table
hw/romprg_megadrive_cart/cart/: romprg_megadrive_cart-B.Cu.gbr  romprg_megadrive_cart-B.Mask.gbr  romprg_megadrive_cart-B.Paste.gbr  romprg_megadrive_cart-B.SilkS.gbr  romprg_megadrive_cart-Edge.Cuts.gbr  romprg_megadrive_cart-F.Cu.gbr  romprg_megadrive_cart-F.Mask.gbr  romprg_megadrive_cart-F.Paste.gbr  romprg_megadrive_cart-F.SilkS.gbr  romprg_megadrive_cart.drl
sw-cli/: CMakeLists.txt  makefile
sw-cli/src/: main.c  main.cpp  megadrive_header.cpp  megadrive_header.hpp  options.cpp  options.hpp  romprg.cpp  romprg.hpp  trim.hpp
